--- a/package.json
+++ b/package.json
@@ -1,40 +1,90 @@
 {
-  "name": "video-editor-ai",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@ffmpeg/ffmpeg": "^0.12.15",
-    "@ffmpeg/util": "^0.12.2",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "dev": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+	"name": "video-editor-ai",
+	"version": "0.1.0",
+	"description": "A React-based video editor component with timeline editing, FFmpeg integration, and AI-powered features",
+	"main": "dist/index.js",
+	"module": "dist/index.esm.js",
+	"types": "dist/index.d.ts",
+	"files": [
+		"dist",
+		"README.md"
+	],
+	"scripts": {
+		"dev": "react-scripts start",
+		"build": "rollup -c",
+		"build:lib": "rollup -c rollup.config.js",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject",
+		"storybook": "storybook dev -p 6006",
+		"build-storybook": "storybook build",
+		"prepublishOnly": "npm run build:lib"
+	},
+	"keywords": [
+		"react",
+		"video-editor",
+		"ffmpeg",
+		"timeline",
+		"video-processing",
+		"ai",
+		"component"
+	],
+	"author": "Your Name",
+	"license": "MIT",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/yourusername/video-editor-ai.git"
+	},
+	"peerDependencies": {
+		"react": ">=16.8.0",
+		"react-dom": ">=16.8.0"
+	},
+	"dependencies": {
+		"@ffmpeg/ffmpeg": "^0.12.15",
+		"@ffmpeg/util": "^0.12.2"
+	},
+	"devDependencies": {
+		"@testing-library/jest-dom": "^5.17.0",
+		"@testing-library/react": "^13.4.0",
+		"@testing-library/user-event": "^13.5.0",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-scripts": "5.0.1",
+		"web-vitals": "^2.1.4",
+		"@storybook/addon-docs": "^9.0.13",
+		"@storybook/addon-onboarding": "^9.0.13",
+		"@storybook/preset-create-react-app": "^9.0.13",
+		"@storybook/react-webpack5": "^9.0.13",
+		"eslint-plugin-storybook": "^9.0.13",
+		"prop-types": "^15.8.1",
+		"storybook": "^9.0.13",
+		"webpack": "^5.99.9",
+		"@rollup/plugin-commonjs": "^25.0.0",
+		"@rollup/plugin-node-resolve": "^15.0.0",
+		"@rollup/plugin-babel": "^6.0.0",
+		"rollup": "^3.0.0",
+		"rollup-plugin-peer-deps-external": "^2.2.4",
+		"rollup-plugin-terser": "^7.0.0",
+		"@babel/core": "^7.22.0",
+		"@babel/preset-env": "^7.22.0",
+		"@babel/preset-react": "^7.22.0"
+	},
+	"eslintConfig": {
+		"extends": [
+			"react-app",
+			"react-app/jest",
+			"plugin:storybook/recommended"
+		]
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	}
 }
